OrderManagementAPI-Deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ordermanagementapi-svc
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"    
spec:
  type: LoadBalancer
  selector:
    app: ordermanagementapi-svc
  ports:
  - port: 80
    name: http-port
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-ordermanagementapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ordermanagementapi-svc
  template:
    metadata:
      labels:
        app: ordermanagementapi-svc
    spec:
      containers:
      - name: ordermanagementapi
        image: onlineshopping22acr.azurecr.io/ordermanagementapi:#{Build.BuildId}#
        ports:
        - containerPort: 80
        - containerPort: 443
        resources:
          limits:
            cpu: "0.10"
      imagePullSecrets:
        - name: acr-secret
