ProductAPI-Deployment-Backup.yaml
apiVersion: v1
kind: Service
metadata:
  name: productapi-svc
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"  
spec:
  type: LoadBalancer
  selector:
    app: productapi-svc
  ports:
  - port: 80
    name: http-port
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-productapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productapi-svc
  template:
    metadata:
      labels:
        app: productapi-svc
    spec:
      containers:
      - name: productapi
        image: onlineshopping22acr.azurecr.io/productapi:#{Build.BuildId}#
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
      - name: config-volume
        configMap:
          name: productapi-configmap
        resources:
          limits:
            cpu: "0.10"
      imagePullSecrets:
        - name: acr-secret
