z2.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-cartapi
  labels:
    version: dev
    product: productapi
spec:
  selector:
    app: cartapi
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-cartapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cartapi
  template:
    metadata:
      labels:
        app: cartapi
    spec:
      containers:
      - name: cartapi
        image: onlineshopping22acr.azurecr.io/cartapi:#{Build.BuildId}#
        ports:
        - containerPort: 80
        - containerPort: 443
        resources:
          limits:
            cpu: "0.10"
      imagePullSecrets:
        - name: acr-secret
